# lowres_new

./: .gitignore  README.md  evaluation_config.json  modelscope_sources.json  nohup.out  requirements-serve.txt  requirements.txt
datasets/: eval_manifest.json  flores_ntrex_mapping.json
dictionary_tool/: README.md  agent_prompt.py  agent_runtime.py  core.py  demo_mcp_client.py  eval_langgraph_agent.py  langgraph_mcp_agent_demo.py  llm.py  pyproject.toml  requirements.txt  run_eval_langgraph_agent.sh  server.py  tool_registry.py
dictionary_tool/tests/: test_agent_prompt.py  test_core.py  test_llm.py  test_tool_registry.py
dictionary_tool/tests/fixtures/sample_lexicon/: dict_terms_eng_Latn__zho_Hans.jsonl  dict_terms_zho_Hans__eng_Latn.jsonl
docs/: moe_pair_experts.md  paper_report_low_resource_mt.md  training_4x5090.md
scripts/: activate_conda_lowres.sh  activate_venv.sh  augment_fineweb_pairs_via_model.py  augment_fineweb_tha_zho_via_model.py  augment_nllb_eng_to_zho_via_model.py  build_nllb_draft_refine_jsonl.py  chat_interactive.py  check_all.sh  check_modelscope_download.py  check_syntax_and_imports.py  clone_alpaca_mt_to_instruction_input_response.py  download_eval_assets.py  download_hf_nllb_200_3_3b.py  download_hf_nllb_moe_54b.py  download_models_to_models_dir.py  expand_language_pairs.py  flores_lang_zh.py  merge_alpaca_jsonl_weighted.py  merge_ccmatrix_llamafactory_jsonl.py  merge_nllb_draft_refine_jsonl.py  merge_nllb_llamafactory_jsonl.py  merge_oscar_pretrain_llamafactory_jsonl.py  oneoff_fix_tha_zho_and_generate_eng_tha.py  plot_bleu_heatmap.py  prepare_ccmatrix_for_llamafactory.py  prepare_datasets.py  run_eval.py  (+6 more)
(+96 files in other folders)
