[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lowres-dictionary-tool"
version = "0.1.0"
description = "Standalone FastMCP dictionary lookup tool for low-resource MT lexicons"
requires-python = ">=3.10"
dependencies = [
  "fastmcp>=2.0.0",
  "mcp>=1.0.0",
  "langchain>=0.3.0",
  "langgraph>=0.2.0",
  "langchain-openai>=0.2.0",
  "langchain-mcp-adapters>=0.1.0",
  "openai>=1.40.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
