[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lowres-dictionary-tool"
version = "0.1.0"
description = "Standalone dictionary lookup and tool-calling runtime for low-resource MT lexicons"
requires-python = ">=3.10"
dependencies = [
  "langchain>=0.3.0",
  "langchain-openai>=0.2.0",
  "openai>=1.40.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
